DailyReward: Ajout de l'image Ajout du Dossier confi alcamod > dailyReward> config + playerData > uuid.json